--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,13 +35,38 @@ file(GLOB_RECURSE HEADER_FILES include/*.h)
 # Create static or shared library
 add_library(rtlib STATIC ${SOURCE_FILES} ${HEADER_FILES})
 
-# Include directory for public headers
-target_include_directories(rtlib PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
+# Specify include directories
+target_include_directories(rtlib PUBLIC
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+        $<INSTALL_INTERFACE:include>
+)
 
 # Add special define for the debug configuration
 target_compile_definitions(rtlib PUBLIC
         $<$<CONFIG:Debug>:RTL_DEBUG_BUILD>
 )
 
-add_executable(rtl_test rtl_test.c)
-target_link_libraries(rtl_test rtlib)
+# Installation directives
+include(GNUInstallDirs)
+
+install(TARGETS rtlib
+        EXPORT rtlibTargets
+        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+        INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+)
+
+install(DIRECTORY include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+
+install(EXPORT rtlibTargets
+        FILE rtlibTargets.cmake
+        NAMESPACE rtlib::
+        DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/rtlib
+)
+
+# Testing executable (only built if this is the main project)
+if (CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
+    add_executable(rtl_test rtl_test.c)
+    target_link_libraries(rtl_test PRIVATE rtlib)
+endif ()
